# xroost

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.py
include/xroost/: avl_tree.hpp  integer.hpp
include/xroost/algo/: binary_search.hpp  lower_bound.hpp  partition.hpp  upper_bound.hpp
include/xroost/algo/sorting/: bubble_sort.hpp  counting_sort.hpp  heap_sort.hpp  insertion_sort.hpp  quick_sort.hpp  quick_sort_r.hpp  selection_sort.hpp  sort_all.hpp
include/xroost/crc/: crc_optimal.hpp
include/xroost/endian/: endian.hpp
include/xroost/lockless/: detail.hpp  spmcqueue.hpp  spscqueue.hpp
include/xroost/memory/: unique_ptr.hpp
include/xroost/utility/: aligned_storage.hpp
